[package]
name = "sol_vault_transfer"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "sol_vault_transfer"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.22.1"
anchor-spl = "0.22.1"
spl-token = "3.2.0"
zo = {package = "zo-abi", version = "0.4.0-beta", features = ["cpi", "devnet"]}
